fix: prevent ToggleMenu wrapping

--- a/src/ToggleMenu/ToggleMenu.scss
+++ b/src/ToggleMenu/ToggleMenu.scss
@@ -88,6 +88,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    white-space: nowrap;
 
     svg {
       width: 100%;
